--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+<script src="js.js"></script>
 
-    <script src="js.js"></script>
-
+<form action="/gmbr.html">
+    <h1>Mau liat sesuatu ga babe?</h1>
+    <input type="submit" value="Mauu">
+</form>
 </body>
 </html>
