--- a/tombol.html
+++ b/tombol.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
+    <form action="gmbr.html">
         <input type="button" name="" id="Pencet pwiss">
     </form>
 </body>
