--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <form action="/gmbr.html">
     <h1>Mau liat sesuatu ga babe?</h1>
-    <input type="submit" value="Mauu">
+    <button type="submit">Mauu</button>    
 </form>
+
 </body>
 </html>
