--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 <script src="js.js"></script>
 
-<form action="/gmbr.html">
-    <h1>Mau liat sesuatu ga babe?</h1>
-    <button type="submit">Mauu</button>    
+<form action="https://airlanggasp.github.io/http-airlanggasp.github.io/gmbr.html" method="POST">
+    <h1>Mau liat sesuatu ga babe</h1>
+    <input type="submit" value="Mau">
 </form>
 
 </body>
