--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 <script src="js.js"></script>
 
-<form action="https://airlanggasp.github.io/http-airlanggasp.github.io/gmbr.html" method="POST">
+<form action="gmbr.html">
     <h1>Mau liat sesuatu ga babe</h1>
-    <input type="submit" value="Mau">
+    <input type="submit" value="yasdh mau">
 </form>
 
 </body>
