--- a/gmbr.html
+++ b/gmbr.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
   <style>
     .container {
       position: relative;
@@ -13,21 +16,21 @@
       width: 100%;
       text-align: center;
       font-size: 500%;
-      color: lightgoldenrodyellow;
+      color: red;
     }
 
     img {
       width: 100%;
       height: auto;
-      opacity: 0.8;
+      opacity: 1;
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <img src="luv.jpg" width="1000" height="300">
     <div class="center">Love U Lia</div>
   </div>
 </body>
-
 </html>
