--- a/gmbr.html
+++ b/gmbr.html
@@ -11,11 +11,11 @@
     }
 
     .center {
-      position: absolute;
+      position:absolute;
       top: 50%;
       width: 100%;
       text-align: center;
-      font-size: 500%;
+      font-size: 400%;
       color: red;
     }
 
@@ -32,5 +32,10 @@
     <img src="luv.jpg" width="1000" height="300">
     <div class="center">Love U Lia</div>
   </div>
+  
+  <audio hidden autoplay loop>
+    <source src="/Aku ingin-Sapardi Djoko Damono.mp3" type="audio/mpeg">
+    Browsermu ga ngedukung, coba upgrade dong babe
+  </audio>
 </body>
 </html>
